# lyapunov-edge-inference

./: .gitignore  ARCHITECTURE.md  CUE_CARDS.txt  DEMO_NARRATION.md  DEMO_RECORDING.md  Dockerfile  Makefile  NARRATION_CHEATSHEET.txt  README.md  RUN_DEMO_NOW.sh  error_in_Commit 4af345bd.txt  main.py  pyproject.toml  record_demo.bat  record_demo.sh  requirements.txt
.github/workflows/: ci.yml
app/: dashboard.py
config/: controller.yaml  deployment.yaml  pipeline.yaml
config/exploration/: aggressive_exploration.json  (+4 more)
data/: README.md
demo/: record_demo.py
docs/: CONVERGENCE_GUIDE.md  ENGINE_BUILD.md  plan.md
paper/: main.tex  references.bib
scripts/: ablation.py  analyze_training.py  build_tensorrt.py  calibrate_cp.py  collect_traces.py  debug_violations.py  eval_agent.py  eval_baselines.py  explore_config.py  export_onnx.py  inspect_traces.py  make_video_from_frames.py  plot_results.py  run_paper_experiments.ps1  run_paper_experiments.sh  stress_test.py  train_detection.py  train_lyapunov.py  train_ppo.py  train_segmentation.py
src/: __init__.py  agent_lyapunov_ppo.py  baselines.py  camera.py  conformal.py  controller.py  detection.py  drift.py  env.py  lagrangian.py  latency_predictor.py  lyapunov.py  monitoring.py  preprocess.py  reward.py  segmentation.py  state_features.py  telemetry.py  torch_compat.py  trt_common.py  utils.py
tests/: __init__.py  test_action_space.py  test_agent.py  test_checkpoint_roundtrip.py  test_conformal.py  test_controller.py  test_env.py  test_lagrangian.py  test_lyapunov.py  test_reward.py  test_state_features.py
